// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation validation should fail validation for invalid \`hot\` configuration 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.hot should be one of these:
   boolean | \\"only\\"
   Details:
    * configuration.hot should be a boolean.
    * configuration.hot should be \\"only\\"."
`;

exports[`Validation validation should fail validation for invalid \`needClientEntry\` configuration 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.client.needClientEntry should be one of these:
   boolean | function
   Details:
    * configuration.client.needClientEntry should be a boolean.
    * configuration.client.needClientEntry should be an instance of function."
`;

exports[`Validation validation should fail validation for invalid \`needHotEntry\` configuration 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.client.needHotEntry should be one of these:
   boolean | function
   Details:
    * configuration.client.needHotEntry should be a boolean.
    * configuration.client.needHotEntry should be an instance of function."
`;

exports[`Validation validation should fail validation for invalid \`static\` configuration 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.static should be one of these:
   boolean | non-empty string | object { directory?, staticOptions?, publicPath?, serveIndex?, watch? } | [non-empty string | object { directory?, staticOptions?, publicPath?, serveIndex?, watch? }, ...] (should not have fewer than 1 item)
   Details:
    * configuration.static[0] should be one of these:
      non-empty string | object { directory?, staticOptions?, publicPath?, serveIndex?, watch? }
      Details:
       * configuration.static[0] should be a non-empty string.
       * configuration.static[0] should be an object:
         object { directory?, staticOptions?, publicPath?, serveIndex?, watch? }"
`;

exports[`Validation validation should fail validation for no additional properties 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration has an unknown property 'additional'. These properties are valid:
   object { bonjour?, client?, compress?, dev?, firewall?, headers?, historyApiFallback?, host?, hot?, http2?, https?, liveReload?, onAfterSetupMiddleware?, onBeforeSetupMiddleware?, onListening?, open?, port?, proxy?, public?, setupExitSignals?, static?, transportMode?, watchFiles? }"
`;
